--- a/frontend/shoppy/package.json
+++ b/frontend/shoppy/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/system": "^7.1.0",
+    "@mui/x-data-grid": "^8.4.0",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "framer-motion": "^12.14.0",
