--- a/frontend/shoppy/package.json
+++ b/frontend/shoppy/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.9.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.14.0",
+    "jwt-decode": "^4.0.0",
     "moment-timezone": "^0.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
