--- a/frontend/shoppy/package.json
+++ b/frontend/shoppy/package.json
@@ -19,14 +19,16 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
-    "framer-motion": "^12.14.0",
+    "framer-motion": "^12.16.0",
     "jwt-decode": "^4.0.0",
     "moment-timezone": "^0.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "yup": "^1.6.1"
   },
