--- a/frontend/shoppy/package.json
+++ b/frontend/shoppy/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.16.0",
     "jwt-decode": "^4.0.0",
+    "lodash.throttle": "^4.1.1",
     "moment-timezone": "^0.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
